# GPUSAM

./: .gitignore  CMakeLists.txt  Plots.ipynb  README.md  requirements.txt  test.sh
cmake/: config.cmake
include/cpu/: GMRES.h
include/gpu/: Arnoldi.cuh  DenseMatrix.cuh  GMRES.cuh  GivensRot.cuh  Helpers.cuh  Linalg.cuh  Precondition.cuh  SparseILU.cuh  SparseMatrix.cuh  Vector.cuh
octave/: gmresTest.m  r_gmres.m  r_test.m  sam.m
python/: GMRES.ipynb
src/: gmres.cc  gpuGmres.cu  gpuSam.cu  sam.cu  testLinalg.cu  testSam.cu
